<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_color"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:layout_gravity="center" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logoepis"
            android:contentDescription="@string/logo_epis" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autenticationText"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="62dp"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/username"
            />

        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingrese_usuario"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:autofillHints=""
            android:textColor="@color/white"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/ingrese_password"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:autofillHints=""
            android:textColor="@color/white"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:text="@string/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background ="@drawable/custom_button"

            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40sp" />

        <TextView
            android:id="@+id/txtMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mensajeError"
            android:textAlignment="center"
            android:textColor="#09031C"
            />

    </LinearLayout>
</LinearLayout>